--- a/FsxLogger.Translations/Vocabulary.resx
+++ b/FsxLogger.Translations/Vocabulary.resx
@@ -120,7 +120,28 @@
   <data name="CancelLoginText" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="LoginFailedText" xml:space="preserve">
+    <value>Invalid credentials!</value>
+  </data>
+  <data name="LoginFailedTitle" xml:space="preserve">
+    <value>Login failed!</value>
+  </data>
+  <data name="LoginSuccessfulText" xml:space="preserve">
+    <value>Login successful!</value>
+  </data>
+  <data name="LoginSuccessfulTitle" xml:space="preserve">
+    <value>Login OK!</value>
+  </data>
   <data name="LoginText" xml:space="preserve">
     <value>Login</value>
+  </data>
+  <data name="LoginTitle" xml:space="preserve">
+    <value>Login to your account</value>
+  </data>
+  <data name="PasswordText" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="UsernameText" xml:space="preserve">
+    <value>Username</value>
   </data>
 </root>
